# co2_predictions

./: .gitignore  pyproject.toml  readme.md  requirements.txt
notebooks/: 00_build_master_dataset.ipynb  01_lgb_single.ipynb  02_lgb_168.ipynb  03_tft.ipynb  test.ipynb
src/co2_forecasting.egg-info/: PKG-INFO  SOURCES.txt
src/forecasting/: collect_data.py
