[project]
name = "co2-forecasting"
version = "0.1.0"
description = "CO2 factor forecasting with TFT and NHiTS"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]